<?xml version="1.0" encoding="UTF-8"?>
<!-- SPDX-FileCopyrightText: 2022 2021 2020 RTE FRANCE -->
<!-- -->
<!-- SPDX-License-Identifier: Apache-2.0 -->
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.lfenergy.compas</groupId>
    <artifactId>compas-sct</artifactId>
    <version>local-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>COMPAS-SCT</name>

    <distributionManagement>
        <repository>
            <id>github-packages-compas</id>
            <name>GitHub Packages</name>
            <url>https://maven.pkg.github.com/com-pas/compas-sct</url>
        </repository>
    </distributionManagement>

    <repositories>
        <repository>
            <id>github-packages-compas</id>
            <name>Github Packages CoMPAS</name>
            <url>https://maven.pkg.github.com/com-pas/*</url>
        </repository>
    </repositories>

    <properties>
        <java.version>17</java.version>
        <compas.core.version>local-SNAPSHOT</compas.core.version>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <sonar.coverage.exclusions>sct-coverage/**</sonar.coverage.exclusions>
        <aggregate.report.dir>../sct-coverage/target/site/jacoco-aggregate/jacoco.xml</aggregate.report.dir>
        <sonar.coverage.jacoco.xmlReportPaths>${basedir}/${aggregate.report.dir}</sonar.coverage.jacoco.xmlReportPaths>
        <compas-core.version>0.12.0</compas-core.version>
        <compas-scl-xsd.version>0.0.4</compas-scl-xsd.version>
        <maven.plugin.javadoc>3.4.1</maven.plugin.javadoc>
        <maven-source-plugin.version>3.2.1</maven-source-plugin.version>
        <junit-version>5.9.0</junit-version>
        <logback-classic.version>1.4.5</logback-classic.version>
        <assertj.version>3.22.0</assertj.version>
        <lombok.version>1.18.24</lombok.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.lfenergy.compas.core</groupId>
            <artifactId>scl2007b4</artifactId>
        </dependency>
        <dependency>
            <groupId>org.lfenergy.compas.core</groupId>
            <artifactId>scl-extension</artifactId>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
        </dependency>
    </dependencies>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-api</artifactId>
                <version>${junit-version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-engine</artifactId>
                <version>${junit-version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-params</artifactId>
                <version>${junit-version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.lfenergy.compas.core</groupId>
                <artifactId>scl2007b4</artifactId>
                <version>${compas-core.version}</version>
            </dependency>
            <dependency>
                <groupId>org.lfenergy.compas.core</groupId>
                <artifactId>scl-extension</artifactId>
                <version>${compas-core.version}</version>
            </dependency>
            <dependency>
                <groupId>org.lfenergy.compas.xsd</groupId>
                <artifactId>compas-scl-xsd</artifactId>
                <version>${compas-scl-xsd.version}</version>
            </dependency>
            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-classic</artifactId>
                <version>${logback-classic.version}</version>
            </dependency>
            <dependency>
                <groupId>org.assertj</groupId>
                <artifactId>assertj-core</artifactId>
                <version>${assertj.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <modules>
        <module>sct-commons</module>
        <module>sct-coverage</module>
        <module>sct-data</module>
        <module>sct-app</module>
    </modules>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.lfenergy.compas.xsd</groupId>
                    <artifactId>compas-scl-xsd</artifactId>
                    <version>${compas-scl-xsd.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.lfenergy.compas.core</groupId>
                    <artifactId>scl-extension</artifactId>
                    <version>${compas-core.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.10.1</version>
                    <configuration>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.jacoco</groupId>
                    <artifactId>jacoco-maven-plugin</artifactId>
                    <version>0.8.8</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>2.22.2</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>3.2.2</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>${maven.plugin.javadoc}</version>
                    <executions>
                        <execution>
                            <id>attach-javadocs</id>
                            <phase>package</phase>
                            <goals>
                                <goal>aggregate</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>${maven-source-plugin.version}</version>
                    <executions>
                        <execution>
                            <id>attach-sources</id>
                            <phase>verify</phase>
                            <goals>
                                <goal>jar-no-fork</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <id>prepare-agent</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    <profiles>
        <profile>
            <id>javadoc</id>
            <properties>
                <javadoc.title>CoMPAS SCT</javadoc.title>
                <javadoc.lint>all,-html,-missing,-syntax,-reference</javadoc.lint>
            </properties>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <configuration>
                            <doctitle>${javadoc.title}</doctitle>
                            <doclint>${javadoc.lint}</doclint>
                            <additionalJOption>--no-module-directories</additionalJOption>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
